# pyapi-server

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: checks-and-tests.yml
.semaphore/: create-release.yml  release-create.yml  release-publish.yml  release-version.yml  semaphore.yml  version-release.yml
docs/: index.md  requirements.docs.txt  requirements.txt
example/: api_error.py  server.py
pyapi/server/: __init__.py  openapi.py  spec.py  utils.py  validation.py
release-notes/: 0.1.1.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.2.7.md  0.2.8.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.4.0.md  0.4.1.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md
tests/: conftest.py  endpoints.py  openapi.json  openapi.yaml  test_app.py  test_endpoints.py  test_server.py  test_service.py  test_spec.py  test_validation.py
